--- a/style.css
+++ b/style.css
@@ -2,67 +2,98 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: sans-serif;
 }
 
-.container {
-  width: 500px;
-  margin: 3rem auto;
-  padding: 20px;
-  align-items: center;
-  background-image: linear-gradient(rgb(107, 128, 214), rgb(92, 207, 239));
+header {
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 h1 {
-  text-align: center;
   font-size: 40px;
-  margin-top: 10rem;
-  margin-bottom: 3rem;
-  color: #fff;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-}
-
-.text {
-  padding: 12px 6rem;
-  font-size: 15px;
-  background-color: inherit;
-  border: 1px solid #fff;
-  border-radius: 5px;
   text-align: center;
-  color: white;
+  color: dodgerblue;
 }
 
-.box {
+.input-container {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 1rem;
+}
+
+.text,
+.btn {
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid dodgerblue;
 }
 
 .btn {
-  padding: 10px 17px;
-  background-color: dodgerblue;
-  border: none;
-  border-radius: 50%;
   color: #fff;
-  font-size: 20px;
+  background-color: dodgerblue;
+  font-weight: 700;
   margin-left: 10px;
   cursor: pointer;
-  transition: 0.5s;
-  border: 1px solid #fff;
 }
 
-#myList {
-  margin-top: 2rem;
+.text {
+  width: 400px;
+  margin: 2rem 0;
 }
 
-ul li {
-  margin: 0 30px;
-  font-size: 20px;
-  font-family: sans-serif;
-  list-style-type: circle;
+.task {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: rgb(10, 107, 156);
+  padding: 10px;
+  border-radius: 10px;
+  margin-bottom: 10px;
+}
+
+.edit {
+  cursor: pointer;
+  text-align: center;
+  width: 50px;
+  padding: 5px;
+  font-size: 15px;
+  border: 1px solid black;
+  border-radius: 5px;
+  color: white;
+  background-color: rgb(148, 12, 12);
+  margin-right: 10px;
+}
+
+.delete {
+  cursor: pointer;
+  text-align: center;
+  padding: 5px;
+  width: 60px;
+  font-size: 15px;
+  border: 1px solid black;
+  border-radius: 5px;
+  color: white;
+  background-color: rgb(238, 33, 33);
+}
+
+.parag {
+  font-size: 15px;
+  width: 300px;
   color: #fff;
+  background-color: inherit;
+  padding: 5px;
+  border: none;
+  outline: none;
+  transition: 0.5s;
 }
 
-.check {
-  text-decoration: line-through;
+.paragPress {
+  color: rgb(219, 178, 218);
+}
+
+.boxList {
+  display: flex;
 }
